# vpc-1

./: .gitignore  README.md  pyproject.toml
tp1/: TP1_VisionComputadora1.ipynb  segmentacion.py
tp1/utils/: utils.py
tp2/: TP2_VisionComputadora1.ipynb
tp2/enunciado/: output_thresh_nuevo.mov
tp2/output_video/: quality_measure_all_frame.avi  quality_measure_laplacian.avi  quality_measure_matrix_(3, 3).avi  quality_measure_matrix_(4, 4).avi  quality_measure_matrix_(5, 5).avi  quality_measure_matrix_(7, 5).avi  quality_measure_roi.avi
tp2/utils/: utils.py  video.py
tp3/utils/: utils.py
