[tool.poetry]
name = "vpc-1"
version = "0.1.0"
description = "Poetry packages para trabajos practicos de vision por computadora 1"
authors = ["Diego <sarinadiego@gmail.com>"]
readme = "README.md"
packages = [{include = "vpc_1"}]

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
